# pulumiup-2025-keynote-demo

./: README.md
chatbot-service/app/: Dockerfile  app.py  pyproject.toml
chatbot-service/infra/: Pulumi.yaml  README.md  __main__.py  pyproject.toml
chatbot-service/infra-python/: Pulumi.yaml  __main__.py
chatbot-service/infra-python/sdks/container-app/: setup.py
chatbot-service/infra-python/sdks/container-app/pulumi_container_app/: container_app.py
chatbot-service/infra-python/sdks/container-app/pulumi_container_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
chatbot-service/infra-yaml/: Pulumi.dev.yaml  Pulumi.yaml  README.md
chatbot-service/infra-yaml/sdks/pulumi-container-app/: container-app-0.1.0.yaml  container-app-0.2.0.yaml
chatbot-service/infra/sdks/container-app/pulumi_container_app/: pulumi-plugin.json
components/: schema-container-app.json
components/container-app/: PulumiPlugin.yaml  README.md  __main__.py  pyproject.toml  requirements.txt
components/ecs-chatbot-service/: Pulumi.yaml  __main__.py  pyproject.toml
policies/initech-compliance/: README.md  index.ts  package-lock.json  package.json
templates/chatbot-container-app/: Pulumi.yaml  README.md
templates/chatbot-container-app/sdks/pulumi-container-app/: container-app-0.5.0.yaml
